<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dalilu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.dalilu.ui.dashboard.AlertsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.dalilu.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />
</navigation>