<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CommentsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_updates_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="startUpdatesButtonHandler"
                android:text="@string/start_updates" />

            <Button
                android:id="@+id/stop_updates_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:enabled="false"
                android:gravity="center"
                android:onClick="stopUpdatesButtonHandler"
                android:text="@string/stop_updates" />
        </LinearLayout>

        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/last_update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/location_inadequate_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_settings_inadequate_warning"
            android:visibility="invisible" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

