<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="requests"
            type="com.dalilu.model.RequestModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:cardCornerRadius="@dimen/eightDp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/boy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{requests.name}"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/imgDeleteUser"
                app:layout_constraintStart_toEndOf="@+id/userImage"
                app:layout_constraintTop_toBottomOf="@+id/txtRequestDes" />


            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/fourDp"
                android:text="@{requests.phoneNumber}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/userImage"
                app:layout_constraintTop_toBottomOf="@+id/txtName" />

            <Button
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorAccent"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:text="@string/acpt"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/decline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userImage" />

            <Button
                android:id="@+id/btnSendLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bottomsheetbg"
                android:drawableEnd="@drawable/ic_gps"
                android:drawablePadding="@dimen/eightDp"
                android:padding="@dimen/eightDp"
                android:text="@string/sendLocation"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/decline"
                app:layout_constraintTop_toBottomOf="@+id/userImage" />

            <Button
                android:id="@+id/decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorRed"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:text="@string/dcln"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/btnSendLocation"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/accept"
                app:layout_constraintTop_toBottomOf="@+id/userImage" />

            <ImageView
                android:id="@+id/imgDeleteUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete" />

            <TextView
                android:id="@+id/txtRequestDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/txtName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtPhone"
                app:layout_constraintTop_toTopOf="@+id/userImage" />

            <ProgressBar
                android:id="@+id/pbImageLoading"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/userImage"
                app:layout_constraintEnd_toEndOf="@+id/userImage"
                app:layout_constraintStart_toStartOf="@+id/userImage"
                app:layout_constraintTop_toTopOf="@+id/userImage" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>